reorg locales file

--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
         <!-- <script src="res/main.js" ></script> -->
 
         <!--migration to VueJs-->
+        <script src="res/locales/en.js" ></script>
         <script src="res/i18n.js" ></script>
         <script src="res/main_v2.js" ></script>
 
