locales init for it and es

--- a/index.html
+++ b/index.html
@@ -306,6 +306,8 @@
 
         <!--migration to VueJs-->
         <script src="res/locales/en.js" ></script>
+        <script src="res/locales/es.js" ></script>
+        <script src="res/locales/it.js" ></script>
         <script src="res/i18n.js" ></script>
         <script src="res/main_v2.js" ></script>
 
